<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/pb"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progressBarHeight"
        android:layout_alignBottom="@+id/start"
        android:layout_marginBottom="48dp"
        android:max="@integer/initialTime"
        android:minHeight="@dimen/progressBarHeight" />

    <ProgressBar
        android:id="@+id/pbForStart"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progressBarHeight"
        android:layout_alignBottom="@+id/start"
        android:layout_marginBottom="51dp"
        android:max="@integer/startTime"
        android:minHeight="@dimen/progressBarHeight" />

    <ImageView
        android:id="@+id/start"
        android:layout_width="272dp"
        android:layout_height="109dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:src="@drawable/playbutton"
        android:text="@string/button"
        android:textColor="@color/black"
        android:theme="@style/Button.White"
        android:contentDescription="@string/image" />
    <ImageView
        android:id="@+id/retry"
        android:layout_width="272dp"
        android:layout_height="109dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:src="@drawable/retrybutton"
        android:text="@string/button"
        android:textColor="@color/black"
        android:theme="@style/Button.White"
        android:contentDescription="@string/image"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/questionmark"
                android:contentDescription="@string/image"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/questionmark"
                android:contentDescription="@string/image"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/questionmark"
                android:contentDescription="@string/image"/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/questionmark"
                android:contentDescription="@string/image"/>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/questionmark"
                android:contentDescription="@string/image"/>

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/questionmark"
                android:contentDescription="@string/image"/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/questionmark"
                android:contentDescription="@string/image"/>

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/questionmark"
                android:contentDescription="@string/image"/>

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/questionmark"
                android:contentDescription="@string/image"/>

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/initialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/press_button_to_start"
        android:textAlignment="center"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/congratulationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:textAlignment="center"
        android:text="@string/press_button_to_start"
        android:textSize="34sp" />


</RelativeLayout>